--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -47,6 +47,7 @@
     border-bottom: 1px solid #bbb;
     padding-bottom: 10px;
     margin: 40px 0 10px;
+    width: 60%;
   }
   
   h4 {
@@ -93,14 +94,15 @@
   
   input[type='text'],
   input[type='number'],
-  select[name='income']{
-    font-family: inherit;
+  select[name='income']
+  {
+    font-family: inherit; 
     border: 1px solid #dedede;
-    border-radius: 2px;
+    /* border-radius: 10px; */
     display: block;
     font-size: 16px;
     padding: 10px;
-    width: 100%;
+    width: 60%;
     background-color: #fff;
     color: #404040;
   }
@@ -115,7 +117,7 @@
     font-size: 16px;
     margin: 10px 0 30px;
     padding: 10px;
-    width: 100%;
+    width: 60%;
   }
   
   .btn:focus,
@@ -182,7 +184,10 @@
     opacity: 1;
   }
   .maincontainer{
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+    /* width: 60%; */
+    width: 50%;
+    margin-left: 30%;
+    margin-right: 30%;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
   }
