--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -174,6 +174,7 @@ body{
   justify-content: center;
   align-items: center;
   width: 200%;
+  margin-top: 2rem;
   }
   .container{
     display: flex;
@@ -222,9 +223,7 @@ body{
  flex-direction: column;
 
   }
-  .date label{
-    /* margin-left: 60px; */
-  }
+ 
   .date input{
   
   margin-right: 100px ;
@@ -232,8 +231,12 @@ body{
   }
   small{
     color: red;
-    margin-bottom: 10px;
-    margin-top: 10px;
+display: inline-block;
+margin-left: 10px;
+margin-bottom: 15px;
+   
+    /* margin-bottom: 10px;
+    margin-top: 10px; */
   }
   .inputsignup{
     width: 100% !important;
@@ -247,6 +250,12 @@ body{
     border: 1px solid rgb(219, 219, 219);
     border-radius: 8px;
     box-sizing: border-box;
+  }
+  .errormsg{
+    font-size: 12px;
+    padding: 3px;
+    color: red;
+    display: block;
   }
   .labelfields{
  
